<resources>
    <string name="app_name">To-do List</string>
    <string name="task">Nhiệm Vụ</string>
    <string name="calendar">Lịch</string>
    <string name="mine">Của tôi</string>
    <string name="star_task">Star Task</string>
    <string name="category">Thể loại</string>
    <string name="donations">Quyên góp</string>
    <string name="feedback">Phản hồi</string>
    <string name="question">Hỏi đáp</string>
    <string name="setting">Cài đặt</string>
    <string name="banner_app">Banner app</string>
    <string name="add_task">add task</string>
    <string name="new_task">Nhập nhiệm vụ mới</string>
    <string name="finish_task">Nhiệm vụ hoàn thành</string>
    <string name="TextEmptyTaskOnDay">Không có nhiệm vụ nào trong ngày.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="alarmTime">Thời gian báo thức</string>
    <string name="repeat_task">Lặp lại nhiệm vụ</string>
    <string name="chanel_name_pin_reminder">PinReminder</string>
    <string name="channel_description_pin_reminder">Description</string>
    <string name="toggle_button_set_time">Không thông báo</string>
</resources>