<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/starTaskFragment"
        android:icon="@drawable/outline_star_black_48"
        android:title="@string/star_task"/>

    <item
        android:id="@+id/finishTaskFragment"
        android:icon="@drawable/outline_download_done_black_48"
        android:title="@string/finish_task"/>

    <item
        android:id="@+id/category"
        android:icon="@drawable/outline_category_black_48"
        android:title="@string/category"/>

    <item
        android:id="@+id/donations"
        android:icon="@drawable/outline_favorite_black_48"
        android:title="@string/donations"/>

    <item
        android:id="@+id/feedback"
        android:icon="@drawable/outline_feedback_black_48"
        android:title="@string/feedback"/>

    <item
        android:id="@+id/question"
        android:icon="@drawable/outline_help_black_48"
        android:title="@string/question"/>

    <item
        android:id="@+id/setting"
        android:icon="@drawable/outline_settings_black_48"
        android:title="@string/setting"/>


</menu>